# echoa-play

./: .gitignore  CMakeLists.txt  LICENSE  README.MD  imgui.ini
LICENSES/: ImGuiFileDialog_LICENSE.txt  LIBMPG123_LICENSE.txt
lib/taglib/pkgconfig/: taglib.pc  taglib_c.pc
src/: AppState.hpp  albumArt.cpp  albumArt.h  files.cpp  files.h  loadFonts.cpp  loadFonts.h  main.cpp  playmusic.cpp  playmusic.h  tagRead.cpp  tagRead.h
